src/app/main.scss
html, body {
  height: 100%;
  margin: 0;
}

.ukRoot {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.ukCard {
  height: 100%;
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  padding: 16px;
}

.ukTextField {
  margin-left: 16px;
}

.ukAdvancedButton {
  align-self: flex-start;
  min-width: 40px !important;
}

